# Vaughan-Dioxus

./: .dockerignore  .gitignore  .gitleaks.toml  ARCHITECTURE.md  AUDIT_INTERNAL.md  Cargo.toml  DEVELOPER_GUIDE.md  Dockerfile  LICENSE  README.md  REFERENCE-Vaughan-Tauri.md  SECURITY_CHECKLIST.md  USER_GUIDE.md  clippy.toml  deny.toml
.github/workflows/: ci.yml
PulseX/: pulsex-manifest.json
Vaughan-Dioxus/: Cargo.toml  design.md  requirements.md  tasks.md
Vaughan-Dioxus/Vaughan-Dioxus/: LOCAL-DOCS-BUILD.md  REFERENCE-Vaughan-old.md
Vaughan-Dioxus/src/: app.rs  browser.rs  chain_bootstrap.rs  dapp_approval.rs  main.rs  pulsex_local.rs  services.rs  theme.rs  wallet_ipc.rs  wallet_rpc_server.rs  wallet_selectors.rs
Vaughan-Dioxus/src/components/: account_selector.rs  address_display.rs  balance_display.rs  mod.rs  network_selector.rs  subpage_header.rs  tx_status_badge.rs
Vaughan-Dioxus/src/utils/: clipboard.rs  mod.rs  password_lockout.rs
Vaughan-Dioxus/src/views/: dapps.rs  dashboard.rs  history.rs  import_export.rs  mod.rs  onboarding.rs  receive.rs  send.rs  settings.rs  unlock.rs
scripts/: read-debug-log.py
test-dapp/: index.html
vaughan-contracts/: foundry.toml
vaughan-contracts/src/: AmbireAccount.sol  AmbireAccountFactory.sol  Batcher.sol
vaughan-contracts/src/libs/: BytesLib.sol  MerkleProof.sol  SignatureValidatorV2.sol
vaughan-contracts/test/: Account.t.sol  BatchErc20.t.sol  DexSwap.t.sol  FactoryCollision.t.sol  Fallback.t.sol  GasComparison.t.sol  KeyRotation.t.sol  Multisig.t.sol  NestedAccounts.t.sol  NftReceiver.t.sol  ReplayProtection.t.sol  Security.t.sol
vaughan-core/: Cargo.toml  build.rs
vaughan-core/src/: lib.rs  logging.rs  native_dapps.rs  test_only.rs
vaughan-core/src/chains/: mod.rs  types.rs
vaughan-core/src/chains/evm/: adapter.rs  history.rs  mod.rs  networks.rs  utils.rs
vaughan-core/src/core/: account.rs  ambire_abi.rs  history.rs  mod.rs  network.rs  persistence.rs  scw_transaction.rs  signing.rs  smart_account.rs  token.rs  transaction.rs  wallet.rs
vaughan-core/src/error/: mod.rs
vaughan-core/src/models/: erc20.rs  mod.rs  wallet.rs
vaughan-core/src/monitoring/: balance_watcher.rs  mod.rs
vaughan-core/src/security/: encryption.rs  hd_wallet.rs  keyring_service.rs  mod.rs  rate_limit.rs
vaughan-core/tests/: crypto_smoke.rs  scw_integration.rs
vaughan-ipc-types/: Cargo.toml
vaughan-ipc-types/src/: lib.rs
vaughan-ipc-types/tests/: smoke.rs
vaughan-tauri-browser/: Cargo.toml  build.rs  index.html  provider_inject.js  tauri.conf.json
vaughan-tauri-browser/capabilities/: default.json
vaughan-tauri-browser/doc/: TOPNAV-SPIKE.md
vaughan-tauri-browser/permissions/: ipc-bridge.toml  navigate.toml  spike.toml
vaughan-tauri-browser/src/: ipc.rs  ipc_pool.rs  lib.rs  main.rs  provider.html  thin-proxy.js
vaughan-trusted-hosts/: Cargo.toml
vaughan-trusted-hosts/src/: lib.rs
vaughan-trusted-hosts/tests/: allowlist_smoke.rs
