[workspace]
resolver = "2"
members = [
    "vaughan-core",
    "Vaughan-Dioxus",
    "vaughan-tauri-browser",
    "vaughan-ipc-types",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Vaughan Team"]
license = "MIT OR Apache-2.0"
repository = ""

# Single Alloy version for all crates (Ethereum primitives, RPC, signing).
[workspace.dependencies]
alloy = { version = "1.7", default-features = false, features = [
    "std",
    "network",
    "providers",
    "provider-http",
    "reqwest",
    "signers",
    "signer-local",
    "rpc-types-eth",
    "consensus",
    "contract",
    "sol-types",
    "rlp",
    "dyn-abi",
    "json",
    "transports",
    "rpc-client",
] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
