[package]
name = "vaughan-core"
version.workspace = true
edition.workspace = true
description = "Shared wallet core: chains, core logic, security, monitoring"

[dependencies]
# Chain / Ethereum (version from workspace root)
alloy = { workspace = true }
async-trait = "0.1"
url = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["sync", "rt", "macros", "time"] }
moka = { version = "0.12", features = ["future"] }

# Security
keyring = "2.0"
bip39 = "2.0"
coins-bip32 = "0.8"
aes-gcm = "0.10"
argon2 = "0.5"
secrecy = "0.8"
rand = "0.8"
base64 = "0.22"

# Std
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
hex = "0.4"
dirs = "5"

[features]
default = []
audio = []  # Sound notifications
hardware-wallets = []  # Ledger, Trezor

[dev-dependencies]
proptest = "1"
tempfile = "3"
