[package]
name = "vaughan-tauri-browser"
version.workspace = true
edition.workspace = true
description = "Vaughan dApp browser (Tauri + Dioxus)"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
vaughan-ipc-types = { path = "../vaughan-ipc-types" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
