[package]
name = "vaughan-tauri-browser"
version.workspace = true
edition.workspace = true
description = "Vaughan dApp browser (Tauri + Dioxus)"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
vaughan-ipc-types = { path = "../vaughan-ipc-types" }
vaughan-trusted-hosts = { path = "../vaughan-trusted-hosts" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
interprocess = { version = "2", features = ["tokio"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
