[package]
name = "vaughan-tauri-browser"
version.workspace = true
edition.workspace = true
description = "Vaughan dApp browser (Tauri + Dioxus)"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
vaughan-trusted-hosts = { path = "../vaughan-trusted-hosts" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"
url = "2"
reqwest = { version = "0.12", features = ["json"] }


